<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Board Countdown Timer</string>
    <string name="action_settings">Settings</string>
    
    <string name="add">Add</string>    
    <string name="del">Del</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    
    <string name="start_lector_name">Lector Name</string>
	<string name="start_theme_title">Theme title</string>
	<string name="start_coundown_time">10</string>
	
    <string name="lector_name">Lector Name</string>
	<string name="theme_name">Theme title</string>
	<string name="countdown_time">time in min.</string>
	
	<string name="empty_board">Board cannot be empty!</string>
	<string name="empty_timer">Countdown timer cannot be empty!</string>
	<string name="time_out">TIME OUT!</string>

    <string name="desc_add_dialog">Add new board.</string>
    <string name="desc_del_dialog">Delete selected board.</string>
    <string name="desc_start_dialog">Start countdown of selected board.</string>
    <string name="desc_cancel_dialog">Cancel running countdown.</string>
        
</resources>