<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_present_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"        
             	android:text="@string/start_lector_name" />

            <TextView
                android:id="@+id/textView_present_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"        
             	android:text="@string/start_theme_title" />

            <TextView
                android:id="@+id/textView_present_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.80"
                android:gravity="center"
                android:textSize="70sp"        
             	android:text="@string/start_coundown_time" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
 	                android:layout_weight="0.90"
                    android:text="@string/start"
                    	android:contentDescription="@string/desc_start_dialog" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
    	            android:layout_weight="0.10"
                    android:text="@string/cancel"
                    	android:contentDescription="@string/desc_cancel_dialog" />
            </LinearLayout>

        </LinearLayout>

            <LinearLayout
                android:background="#A4A4A4"
                android:layout_width="1dp"
                android:layout_height="match_parent" >
            </LinearLayout>
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.70"
            android:gravity="bottom"
            android:orientation="vertical" >

				 <LinearLayout
				     android:id="@+id/emptyView"
				     android:layout_width="match_parent"
				     android:layout_height="174dp"
				     android:padding="5dp" >

					<ListView
					    android:id="@+id/ListView_main"
					    android:layout_width="match_parent"
					    android:layout_height="165dp"
					    android:layout_gravity="fill_horizontal" >
					</ListView>							
				</LinearLayout>
	
				<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal" >
		
		            <Button
		                android:id="@+id/button_add"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"		                
            			android:layout_weight="0.50"		              
		                android:text="@string/add"
                    	android:contentDescription="@string/desc_add_dialog" />
		           <Button
		                android:id="@+id/button_del"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"		               
            			android:layout_weight="0.50"
		                android:text="@string/del"
                    	android:contentDescription="@string/desc_del_dialog" />

	            </LinearLayout>

        </LinearLayout>        
    </LinearLayout>

</RelativeLayout>