<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoardManager" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext_lector_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:hint="@string/lector_name" />

        <EditText
            android:id="@+id/edittext_theme_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
			android:hint="@string/theme_name" />

        <EditText
            android:id="@+id/edittext_countdown_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" 
			android:hint="@string/countdown_time" />

    </LinearLayout>

</RelativeLayout>